<resources>
    <string name="app_name">Misturador</string>

    <!--label's name-->
    <string name="lbl_home">Home</string>
    <string name="lbl_recipe_insetion">Inserção de Receita</string>
    <string name="lbl_consult_recipe">Consultar Receitas</string>
    <string name="bt_insert_new_recipe">Inserir nova receita</string>

    <!--screen strings-->
    <string name="tv_lbl_enter_title">Digite o título</string>
    <string name="tv_lbl_enter_time">Digite o tempo</string>
    <string name="tv_lbl_enter_speed">Digite a velocidade</string>
    <string name="lbl_helper_text_seconds">Tempo em segundos</string>

</resources>
