<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.RecipeInsertion">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tv_lbl_enter_title"
            android:textColorHint="@color/primaryLightColor"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/til_tempo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:startIconDrawable="@drawable/ic_title_24"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.AppCompat.EditText"
                android:id="@+id/tie_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_tempo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tv_lbl_enter_time"
            android:textColorHint="@color/primaryLightColor"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/extendedAddRecipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:helperText="@string/lbl_helper_text_seconds"
            app:startIconDrawable="@drawable/ic_timer_24"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_velocidade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/tv_lbl_enter_speed"
            android:textColorHint="@color/primaryLightColor"
            app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_velocity_24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_tempo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extendedAddRecipe"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/bt_insert_new_recipe"
            app:icon="@drawable/ic_plus_24"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>